--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,123 @@ body {
   background-color: #f0f0f0;
   color: #333;
 }
+/* ========== GENERAL CONTAINERS ========== */
+.container {
+  display: flex;
+  justify-content: center; 
+  gap: 2.5rem; 
+}
+
+.column-left,
+.column-right {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  margin: 2.5rem;
+}
+
+/* ========== COLOR PALETTE ========== */
+.colors {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.color-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.square {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 0.1875rem;
+  margin-bottom: 0.4375rem;
+}
+
+.hex{
+  font-size: 0.875rem;
+  color: #333;
+}
+
+/* ========== BUTTONS ========== */
+.button {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.button-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn{
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 0.9375rem 4.0625rem;
+  border-radius: 0.4375rem;
+  margin-bottom: 0.4375rem;
+  cursor: pointer;
+}
+
+.btn-blue{
+  background-color: #00055F;
+}
+
+.btn-green{
+  background-color: #006400;
+}
+
+.btn-red{
+  background-color: #e70909;
+}
+
+.btn-variation{
+  background-color: transparent;
+  border: 0.125rem solid #00055F;
+  color: #00055F;
+}
+.btn-variation:hover {
+  background-color: #00055f1a; 
+}
+
+/* ========== INPUT ========== */
+.input {
+  padding: 0.625rem 0.75rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  color: #333;
+  background-color: #fff;
+  border: 0.125rem solid #ccc;
+  display: flex;
+  flex-direction: row;
+  margin: 0.625rem 0;
+}
+
+.input-error {
+  background-color: #fde8e8;
+  border: 0.125rem solid #e70909;
+}
+
+.input-error::placeholder {
+  color: #e70909;
+}
+
+.input-success {
+  background-color: #cae3ca;
+  border: 0.125rem solid #006400;
+}
+
+.input-success::placeholder {
+  color: #006400;
+}
+
+.input-select{
+  display: flex;
+  gap: 0.625rem;
+  align-items: center;
+  font-size: 1rem;
+  margin-top: 0.625rem;
+}
